# kinetic

./: Makefile.in  README.md  changes.txt  configure  configure.in  install.txt  kap-init.tcl  readme.txt  testit  todo.txt
OLDengine/: Makefile  cmdlock.cc  cmdlock.h  code.out  domake  kap-t  kap-t.cc  kap-t.cc-debug  kap-t.cc-double  parsedfile.cc  parsedfile.hh.saf  sihash.h  sshash.h  stopwatch.hh
common/: Makefile.in  cfgfile.c  cfgfile.h  t1.cfg  t2.cfg  t3.cfg  tstcfg.c
common/cpp/: cfgfile.hh  tstcfg.cc
doc/: cookie-counter.ktcl  environment.ktcl  error-handling1.ktcl  error-handling2.ktcl  hello.ktcl  hoststat.ktcl  lessons.ktcl  lessprocs.tcl  samples.ktcl  samples2.ktcl  tests.ktcl  time.ktcl  todo.ktcl  userman.ktcl  vetconv.ktcl  viewsource.ktcl  watch-students.ktcl
engine/: .#kap-t.cc.1.6  .kap-t.cc.swp  Makefile.in  chdir.c  cppdemo2.cc  doit  domake.orig  filemgr.cc  filemgr.cc.orig  filemgr.hh  kap-t.cc  kap-t.cc-during-cvt-unicode  kap-t.cc-zfg  kap-t.cc.safe  makeit  parsedfile.cc.safe
mod_kap/: Makefile.in  mod_kap.c
nskap/: INSTALLATION  Makefile  Makefile-old  Makefile.in  kap-ns.cc  kap-ns.cc-orig
tests/: about.ktcl  chinese-post1.html  chinese-post2.ktcl  cook1.ktcl  credits.ktcl  env.ktcl  escapecgi.ktcl  form1.ktcl  form2.ktcl  get0.html  geturl.tcl  global.ktcl  incl1.ktcl  incl2.ktcl  incl2a.ktcl  incl3.ktcl  incl4.ktcl  incl5.ktcl  parray.ktcl  parse2.ktcl  parse3.ktcl  parse4.ktcl  parse5.ktcl  parse6.ktcl  parse7.ktcl  parse8.ktcl  parse9.ktcl  persistvar.vet  pglob.ktcl  pi.ktcl  pid.ktcl  post0.html  post1.ktcl  post2.ktcl  pwd2.ktcl  quote.ktcl  redirect.ktcl  redirect1.ktcl  redirect2.ktcl  redirect3.ktcl  (+8 more)
unclassified/: Makefile  Makefile.in  cmdlocktest.cc  dumppblock.cc  filemgrtest.cc  head.c  head.sh  http-samples.txt  nskap-setup.tcl  parsedfiletest.cc  plug-protocol-sample  programming.txt  run1test  sihashtest.cc  sshashtest.cc  trace_mod.c
unicode-samples/: ora1-bi  ora1-default  ora1-identity  ora1-unicode
