#-----------------------------------------------------------------------
# configure.in -- autoconf script for KAP
#-----------------------------------------------------------------------
# This file is part of KAP, the Kinetic Application Processor.
# Copyright (c) 1999, AsiaInfo Technologies, Inc.
#
# See the file kap-license.txt for information on usage and
# redistribution of this file, and for a DISCLAIMER OF ALL
# WARRANTIES.  Share and Enjoy!
#
# The KAP home page is: http://www.markharrison.net/kap
#-----------------------------------------------------------------------

AC_INIT(engine/kap-t.cc)

#
# get good values for C and C++ compilers

AC_PROG_CC
AC_PROG_CXX

#
# do we  want to build KAP for apache?  Default is yes.
#

AC_ARG_ENABLE(apache, [  --enable-apache         build apache version (default ON)],
    [ok=$enableval], [ok=yes])

if test $ok != no; then
    echo "KAP for Apache:   building"
    BUILD_APACHE=mod_kap
else
    echo "KAP for Apache:   skipping"
    BUILD_APACHE=""
fi

#
# do we  want to build KAP for netscape?  Default is yes.
#

AC_ARG_ENABLE(netscape, [  --enable-netscape       build netscape version (default OFF)],
    [ok=$enableval], [ok=no])

if test $ok != no; then
    echo "KAP for Netscape: building"
    BUILD_NETSCAPE=nskap
else
    echo "KAP for Netscape: skipping"
    BUILD_NETSCAPE=""
fi

#
# where is apxs?  If not specified, we look for it.
#

AC_ARG_WITH(apxs, [  --with-apxs=PATH        use apxs (apache config tool) from PATH],
        APXS=$withval, APXS=noapxs)

# look for it on the path
if test "$APXS" = "noapxs"; then
    OIFS=$IFS IFS=':'
    for d in $PATH; do
        if test -x "$d/apxs"; then
            APXS="$apxslist $d/apxs"
            break
        fi
    done
    IFS=$OIFS
fi

# look for it in some common places
if test "$APXS" = "noapxs"; then

    apxsdirs='/sbin /usr/local/bin /usr/local/apache/bin'
    for d in $apxsdirs; do
        if test -x "$d/apxs"; then
            APXS="$d/apxs"
        fi
    done
fi

# if not found, complain
if test "$APXS" = "noapxs"; then
    if test "$BUILD_APACHE" = "mod_kap"; then
        echo cannot find apache config program 'apxs'.  Specify its location using --with-apxs=PATH.  Double check your spelling.
    fi
fi

#
# Get any needed apache parms.  God bless the author of apxs!
#

if test "$APXS" != "noapxs"; then
    AP_BINDIR=`$APXS -q SBINDIR`
    AP_LIBEXECDIR=`$APXS -q LIBEXECDIR`
else
    AP_BINDIR="not building for apache"
    AP_LIBEXECDIR="not building for apache"
fi

#
# Get Tcl stuff
#

AC_ARG_WITH(tcl, [  --with-tcl=DIR          specify location of tcl base dir],
        TCLDIR=$withval, TCLDIR=notcl)

# look for it in some common places
if test "$TCLDIR" = "notcl"; then

    tcldirs='/usr/local /usr'
    for d in $tcldirs; do
        if test -f "$d/lib/tclConfig.sh"; then
            TCLDIR="$d"
        fi
    done
fi

# if not found, complain
if test "$TCLDIR" = "notcl"; then
    echo cannot find Tcl installation directory.  Specify its location using --with-tcl=DIR.
fi

. $TCLDIR/lib/tclConfig.sh

#
# Get Netscape base directory
#

AC_ARG_WITH(netscape, [  --with-netscape=DIR          specify location of netscape base dir],
        NSDIR=$withval, NSDIR=nons)


#
# wrap up the autoconf magic
#

AC_SUBST(CC)
AC_SUBST(CXX)
AC_SUBST(APXS)
AC_SUBST(AP_BINDIR)
AC_SUBST(AP_LIBEXECDIR)
AC_SUBST(TCLDIR)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(TCL_LD_SEARCH_FLAGS)
AC_SUBST(TCL_PACKAGE_PATH)
AC_SUBST(TCL_LIBS)
AC_SUBST(BUILD_APACHE)
AC_SUBST(BUILD_NETSCAPE)
AC_SUBST(NSDIR)

AC_OUTPUT(Makefile common/Makefile engine/Makefile mod_kap/Makefile nskap/Makefile unclassified/Makefile)

#
# summarize what we did
#

echo configure summary:
echo APXS=$APXS
echo AP_BINDIR=$AP_BINDIR
echo AP_LIBEXECDIR=$AP_LIBEXECDIR
echo TCLDIR=$TCLDIR
echo TCL_LIB_SPEC=$TCL_LIB_SPEC
echo TCL_LIBS=$TCL_LIBS
echo BUILD_APACHE=$BUILD_APACHE
echo BUILD_NETSCAPE=$BUILD_NETSCAPE
echo NSDIR=$NSDIR
